gcc/testsuite/gdc.test/compilable/imports/test1754b.d
module imports.test1754b;

void bar()
{
}
