gcc/testsuite/gdc.test/fail_compilation/imports/fail19609c.d
deprecated(123.4f) module imports.fail19609c;
